<resources>
    <string name="app_name">Beer Book</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_edit">edit</string>

    <string name="beerName">Beer name</string>
    <string name="brewery">Brewery</string>
    <string name="degree">Degree</string>
    <string name="syle">Style</string>
    <string name="color">Color</string>
    <string name="rating">Rating</string>
    <string name="note">Note</string>
    <string name="noteHint">describle the beer in few lines</string>
    <string name="serving">Serving</string>
    <string name="bear_head">Bear head</string>

    <string name="acidity">acid</string>
    <string name="bitterness">bitter</string>
    <string name="sweetness">sweet</string>
    <string name="cereal">cereal</string>;
    <string name="toffee">toffee</string>
    <string name="coffee">coffee</string>
    <string name="herb">herb</string>
    <string name="fruit">fruit</string>
    <string name="spice">spice</string>
    <string name="alcohol">alcool</string>
    <string name="body">body</string>
    <string name="linger">linger</string>

    <string name="pale_straw">pale straw</string>
    <string name="straw">straw</string>
    <string name="pale_gold">pale gold</string>
    <string name="deep_gold">deep gold</string>
    <string name="pale_amber">pale amber</string>
    <string name="medium_amber">medium amber</string>
    <string name="deep_amber">deep amber</string>
    <string name="amber_brown">amber brown</string>
    <string name="brown">brown</string>
    <string name="ruby_brown">ruby brown</string>
    <string name="deep_brown">deep brown</string>
    <string name="black">black</string>

    <string name="low_foam">low foam</string>
    <string name="medium_foam">medium foam</string>
    <string name="high_foam">high foam</string>

    <string name="bottle">bottle</string>
    <string name="draft">draft</string>
    <string name="can">can</string>

    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>

    <string name="flavour_wheel">flavour wheel</string>


    <string name="title_activity_beer_detail">BeerDetailActivity</string>

    <string name="first_login_text">
        "Connect allows :\n"
        "- To share your book between multiple devices.\n"
        "- To save yout book online.\n"
        "- To share your tasting sheets with the world."
    </string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
