<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.davymoreau.android.beerbook.AddBeerActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:padding="0dp"
                android:text="@string/beerName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/ed_beer_name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ed_beer_name"
                style="@style/AddTxtBox"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_marginLeft="4dp"
                android:inputType="textCapSentences"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/ivAddBeer"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0"
                tools:mockup="textettst" />

            <ImageView
                android:id="@+id/ivAddBeer"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/ed_beer_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/biere" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brewery" />

        <EditText
            android:id="@+id/ed_brewery"
            style="@style/AddTxtBox"
            android:inputType="textCapSentences" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/syle" />

        <AutoCompleteTextView
            android:id="@+id/ed_style"
            style="@style/AddTxtBox"
            android:imeOptions="actionNext"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/degree" />

        <EditText
            android:id="@+id/ed_degree"
            style="@style/AddTxtBox"
            android:inputType="number|numberDecimal" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating" />

        <RatingBar
            android:id="@+id/ratting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:max="5"
            android:numStars="5"
            android:stepSize="0.5"
            android:theme="@style/RatingBar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences|textAutoCorrect|textAutoComplete"
            android:text="@string/note" />

        <EditText
            android:id="@+id/ed_note"
            style="@style/AddTxtBox"
            android:gravity="top|left"
            android:hint="@string/noteHint"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="mousse" />

        <EditText
            android:editable="false"
            android:id="@+id/ed_foam"
            style="@style/AddTxtBox"
            android:text="beer head"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="serving" />

        <EditText
            android:editable="false"
            android:id="@+id/ed_serving"
            style="@style/AddTxtBox"
            android:text="glass"
            />

        <TextView
            android:id="@+id/tv_acid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acidity" />
        <SeekBar
            android:id="@+id/sb_acid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_bitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bitterness" />
        <SeekBar
            android:id="@+id/sb_bitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_sweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sweetness" />
        <SeekBar
            android:id="@+id/sb_sweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_cereal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cereal" />
        <SeekBar
            android:id="@+id/sb_ceral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_toffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toffee" />
        <SeekBar
            android:id="@+id/sb_toffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_coffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coffee" />
        <SeekBar
            android:id="@+id/sb_coffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_herb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/herb" />
        <SeekBar
            android:id="@+id/sb_herb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_fruit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fruit" />
        <SeekBar
            android:id="@+id/sb_fruit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_spice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spice" />
        <SeekBar
            android:id="@+id/sb_spice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_alcohol_taste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alcohol" />
        <SeekBar
            android:id="@+id/sb_alcohol_taste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body" />
        <SeekBar
            android:id="@+id/sb_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>

        <TextView
            android:id="@+id/tv_linger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linger" />
        <SeekBar
            android:id="@+id/sb_linger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="5"/>


        <Button
            android:id="@+id/bt_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="Ajouter"
            android:visibility="gone" />

        <Button
            android:id="@+id/bt_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="test"
            android:paddingTop="8dp"
            android:text="tester"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
